[package]
name = "rss_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11.3", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.23", features = ["rt-multi-thread", "macros"] }
rss = "2.0.1"
reqwest = { version = "0.11.13", features= ["blocking"]}
anyhow = "1.0.66"
sqlite = "0.30.3"
